@@ -1,5 +1,5 @@
-AUX return_test_status.patch 309 RMD160 10fe3f382e02eab2fd81b492b66ea7ac0d868562 SHA1 1c18683b52d25c04e7dd376bf4c28e98dd4736a9 SHA256 6be35391b40801058b556c9c8807a88fb12bca50ad5311731dbacf72d45a59b3
+AUX return_test_status.patch 367 RMD160 ba1c133258c6a5d2241909b374f5edb5afc2a07c SHA1 cee8f471ac3e792ec6d538b2569db57249ea09ce SHA256 531557eb562de02fa92a2ff9cd9d554f3e4792e29da35a3273c8d02436abc7f7
 DIST pytyrant-1.1.17.tar.gz 5054 RMD160 f5ef4a151eb1cc08ac956d6683bcd496a36df87d SHA1 44e15e0e6dd196f1c8a4401542d5f5214a7a146f SHA256 f53e542c6e65e7fb439223b5eda8d03f1774b96d59a4081f1fcb9b52d82c1fbb
-EBUILD pytyrant-1.1.17.ebuild 694 RMD160 dbf97b6cef27825a3f0abbd29ea06d34f57a533d SHA1 80d3dacb1be3753c9d4a3d64e5e3787b124b253e SHA256 3af70359ba8945b3d1d1531060810465b880b0c1cc59ca1b2423001488e62c4d
-MISC ChangeLog 308 RMD160 85f91cca43e81195348692af90602f66ce292170 SHA1 cebf365de21c7da82f7902705a41f3fa7020cc13 SHA256 520699219eaec831adb773002678de5938aa2b8a4f4424d70c9fe68f986f62fc
+EBUILD pytyrant-1.1.17.ebuild 787 RMD160 55b07814c6525a3caa81ad3e979eb3c76478a706 SHA1 107fc48365227f762559923fb4dd2dcef4d38b17 SHA256 85ffc6e1e73b8972054365646b2ebfa2b3d2cb5b2568607ba60379201b8d15a3
+MISC ChangeLog 494 RMD160 3fdedae706cc9ee0bdf779efdd28b66360efb5c7 SHA1 f08001b1e6feb754551b6cf00d96806e7f8ff692 SHA256 d3ced2c91bad55691ae2c74584edb57e27b829e12398ff569ce4e6d7289106f8
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
