@@ -3,9 +3,10 @@
 # $Header: $
 
 EAPI="2"
+PYTHON_DEPEND="2"
 SUPPORT_PYTHON_ABIS="1"
 
-inherit distutils
+inherit distutils eutils
 
 DESCRIPTION="Python bindings for tokyo tyrant"
 HOMEPAGE="http://code.google.com/p/pytyrant/"
@@ -14,11 +15,11 @@ SRC_URI="http://pypi.python.org/packages/source/${PN:0:1}/${PN}/${P}.tar.gz"
 LICENSE="MIT"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE=""
+IUSE="test"
 
-RESTRICT_PYTHON_ABIS="3*"
+DEPEND="test? ( net-misc/tokyotyrant )"
 
-DOCS="README"
+RESTRICT_PYTHON_ABIS="3.*"
 
 src_prepare() {
 	epatch "${FILESDIR}/return_test_status.patch"
@@ -27,7 +28,7 @@ src_prepare() {
 src_test() {
 	einfo "${PN} tests require a running instance of tokyo tyrant at port 1978"
 	testing() {
-		"$(PYTHON)" ${PN}.py || die "Tests failed"
+		PYTHONPATH="build-${PYTHON_ABI}/lib" "$(PYTHON)" ${PN}.py || die "Tests failed"
 	}
 	python_execute_function testing
 }
